2001-11-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-asahi.el (shimbun-get-headers): Skip top article.

2001-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-index-url, shimbun-get-headers):
	Use the top page of each group instead of GROUP/update/list.html.

2001-11-03  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-copy-buffer): Added argument `empty'.
	(w3m-goto-url-new-session): Call `w3m-copy-buffer' with argument
	`empty'	non-nil; If new url has `name' portion, goto the base url
	first.
	(w3m-view-this-url): Likewise.

2001-11-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (DOCS): Add `FAQ'.

2001-11-02  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-form.el (w3m-form-parse-forms): Decode value of input tag.
	(w3m-form-replace): Use `w3m-get-text-property-around'.

	* w3m.el (w3m-parse-attributes): Add :decode-entity attribute.
	(w3m-decode-entities-string): New function.

2001-11-02  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-copy-buffer): Call `w3m-goto-url' instead of copying
	buffer content.

2001-11-02  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-reload-this-page): Change the semantic of the prefix
	argument to `clear form and post datas'.

2001-11-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Imcremented to `1.2rc5'.

2001-11-01  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-goto-url): Remove processing url's forms from the
	history when post data.

	* w3m-form.el (w3m-form-resume): Remove submit button status
	to support forms containing multiple submit buttons.

2001-11-01  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m): Use `select-frame-set-input-focus' instead of
	`x-focus-frame'.

	* w3m-form.el (w3m-form-resume): Fix typo.

2001-10-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-attributes): Return the pseudo-normalized URL as